--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -26,41 +26,58 @@
         android:id="@+id/rvChat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/etSendMessage"
+        android:layout_above="@+id/laySendMessage"
         android:layout_below="@+id/tvChat"
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp" />
+        android:layout_marginBottom="0dp"/>
 
-    <EditText
-        android:id="@+id/etSendMessage"
+    <LinearLayout
+        android:id="@+id/laySendMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:fontFamily="@font/helveticaneue_light"
-        android:hint="Type your message..."
-        android:inputType="textMultiLine"
-        android:padding="12dp"
-        android:paddingEnd="50dp"
-        android:textSize="14sp" />
+        android:orientation="horizontal">
 
-    <ImageButton
-        android:id="@+id/ibSend"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="16dp"
-        android:layout_weight="1"
-        android:background="@android:color/transparent"
-        android:src="@drawable/ic_baseline_send_24" />
+<!--        icon for propose trade feature, commented out until implemented-->
+<!--        <ImageButton-->
+<!--            android:layout_width="35dp"-->
+<!--            android:layout_height="35dp"-->
+<!--            android:layout_marginTop="14dp"-->
+<!--            android:layout_marginStart="10dp"-->
+<!--            android:src="@drawable/ic_baseline_add_chart_24_black"-->
+<!--            android:background="@android:color/transparent"-->
+<!--            android:scaleType="fitCenter" />-->
+
+        <EditText
+            android:id="@+id/etSendMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/custom_input"
+            android:ems="10"
+            android:fontFamily="@font/helveticaneue_light"
+            android:hint="Type your message..."
+            android:inputType="textMultiLine"
+            android:padding="12dp"
+            android:paddingEnd="50dp"
+            android:textSize="14sp" />
+
+        <ImageButton
+            android:id="@+id/ibSend"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="17dp"
+            android:layout_marginStart="-55dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="0dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_baseline_send_24" />
+    </LinearLayout>
 
 </RelativeLayout>
