complete live message chat updates

--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -39,7 +39,7 @@
         android:layout_marginBottom="23dp"
         android:layout_toEndOf="@+id/cvProfileImage"
         android:fontFamily="@font/helveticaneue_medium"
-        android:text="TextView"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="12sp"
         tools:text="Spencer Mateega" />
